--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
   - type: web
-    name: your-app-name
+    name: book-recommender
     env: python
     pythonVersion: "3.11"
     buildCommand: |
+      python --version
       python -m pip install --upgrade pip setuptools wheel
       pip install -r requirements.txt
     startCommand: python web.py
