--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.3.2
-sentence-transformers==2.2.2
-pandas==2.0.3
-torch>=2.5.0
-gunicorn==20.1.0
+Flask==3.0.3
+torch==2.2.2
+transformers==4.41.1
+sentence-transformers==2.7.0
+pandas==2.2.2
+scikit-learn==1.4.2
+sentencepiece==0.2.0
