--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==3.0.3
-torch==2.2.2
+torch==2.2.2  # keep this after setting correct Python version
 transformers==4.41.1
 sentence-transformers==2.7.0
 pandas==2.2.2
