--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==3.1.1
-torch==2.7.1
+torch==2.7.1+cpu
 transformers==4.52.4
 sentence-transformers==4.1.0
 pandas==2.3.0
 scikit-learn==1.7.0
 sentencepiece==0.2.0
+gunicorn==21.2.0
